# notas_musicais

./: mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  index.md
docs/stylesheets/: extra.css
docs/templates/: cards.html
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
src/notas_musicais/: escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
