[project]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "notas_musicais"}]

[tool.poetry.scripts]
notas_musicais = "notas_musicais.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
isort = "^6.0.1"
taskipy = "^1.14.1"
black = "^25.1.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.12"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "black . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"
